build/parser.output
Grammar

    0 $accept: RegexAlternatives $end

    1 RegexAlternatives: CompoundRegex
    2                  | CompoundRegex T_PIPE RegexAlternatives

    3 CompoundRegex: Regex
    4              | Regex CompoundRegex

    5 Regex: PlainRegex
    6      | PlainRegex Quantifier

    7 PlainRegex: SimpleRegex
    8           | ClassRegex
    9           | GroupRegex

   10 SimpleRegex: T_ANY_CHAR

   11 ClassRegex: T_BEGIN_CLASS ClassContent T_END_CLASS

   12 ClassContent: T_HYPHEN ClassContentWithoutHyphen
   13             | ClassContentWithoutHyphen

   14 ClassContentWithoutHyphen: T_ANY_CHAR
   15                          | T_ANY_CHAR ClassContentWithoutHyphen
   16                          | T_ANY_CHAR T_HYPHEN T_ANY_CHAR
   17                          | T_ANY_CHAR T_HYPHEN T_ANY_CHAR ClassContentWithoutHyphen

   18 GroupRegex: T_BEGIN_GROUP RegexAlternatives T_END_GROUP

   19 Quantifier: T_BEGIN_QUANTIFIER T_NUMBER T_COMMA T_NUMBER T_END_QUANTIFIER


Terminals, with rules where they appear

$end (0) 0
error (256)
T_PIPE (258) 2
T_ANY_CHAR (259) 10 14 15 16 17
T_HYPHEN (260) 12 16 17
T_BEGIN_QUANTIFIER (261) 19
T_END_QUANTIFIER (262) 19
T_NUMBER (263) 19
T_BEGIN_GROUP (264) 18
T_END_GROUP (265) 18
T_BEGIN_CLASS (266) 11
T_END_CLASS (267) 11
T_COMMA (268) 19


Nonterminals, with rules where they appear

$accept (14)
    on left: 0
RegexAlternatives (15)
    on left: 1 2, on right: 0 2 18
CompoundRegex (16)
    on left: 3 4, on right: 1 2 4
Regex (17)
    on left: 5 6, on right: 3 4
PlainRegex (18)
    on left: 7 8 9, on right: 5 6
SimpleRegex (19)
    on left: 10, on right: 7
ClassRegex (20)
    on left: 11, on right: 8
ClassContent (21)
    on left: 12 13, on right: 11
ClassContentWithoutHyphen (22)
    on left: 14 15 16 17, on right: 12 13 15 17
GroupRegex (23)
    on left: 18, on right: 9
Quantifier (24)
    on left: 19, on right: 6


state 0

    0 $accept: . RegexAlternatives $end

    T_ANY_CHAR     shift, and go to state 1
    T_BEGIN_GROUP  shift, and go to state 2
    T_BEGIN_CLASS  shift, and go to state 3

    RegexAlternatives  go to state 4
    CompoundRegex      go to state 5
    Regex              go to state 6
    PlainRegex         go to state 7
    SimpleRegex        go to state 8
    ClassRegex         go to state 9
    GroupRegex         go to state 10


state 1

   10 SimpleRegex: T_ANY_CHAR .

    $default  reduce using rule 10 (SimpleRegex)


state 2

   18 GroupRegex: T_BEGIN_GROUP . RegexAlternatives T_END_GROUP

    T_ANY_CHAR     shift, and go to state 1
    T_BEGIN_GROUP  shift, and go to state 2
    T_BEGIN_CLASS  shift, and go to state 3

    RegexAlternatives  go to state 11
    CompoundRegex      go to state 5
    Regex              go to state 6
    PlainRegex         go to state 7
    SimpleRegex        go to state 8
    ClassRegex         go to state 9
    GroupRegex         go to state 10


state 3

   11 ClassRegex: T_BEGIN_CLASS . ClassContent T_END_CLASS

    T_ANY_CHAR  shift, and go to state 12
    T_HYPHEN    shift, and go to state 13

    ClassContent               go to state 14
    ClassContentWithoutHyphen  go to state 15


state 4

    0 $accept: RegexAlternatives . $end

    $end  shift, and go to state 16


state 5

    1 RegexAlternatives: CompoundRegex .
    2                  | CompoundRegex . T_PIPE RegexAlternatives

    T_PIPE  shift, and go to state 17

    $default  reduce using rule 1 (RegexAlternatives)


state 6

    3 CompoundRegex: Regex .
    4              | Regex . CompoundRegex

    T_ANY_CHAR     shift, and go to state 1
    T_BEGIN_GROUP  shift, and go to state 2
    T_BEGIN_CLASS  shift, and go to state 3

    $default  reduce using rule 3 (CompoundRegex)

    CompoundRegex  go to state 18
    Regex          go to state 6
    PlainRegex     go to state 7
    SimpleRegex    go to state 8
    ClassRegex     go to state 9
    GroupRegex     go to state 10


state 7

    5 Regex: PlainRegex .
    6      | PlainRegex . Quantifier

    T_BEGIN_QUANTIFIER  shift, and go to state 19

    $default  reduce using rule 5 (Regex)

    Quantifier  go to state 20


state 8

    7 PlainRegex: SimpleRegex .

    $default  reduce using rule 7 (PlainRegex)


state 9

    8 PlainRegex: ClassRegex .

    $default  reduce using rule 8 (PlainRegex)


state 10

    9 PlainRegex: GroupRegex .

    $default  reduce using rule 9 (PlainRegex)


state 11

   18 GroupRegex: T_BEGIN_GROUP RegexAlternatives . T_END_GROUP

    T_END_GROUP  shift, and go to state 21


state 12

   14 ClassContentWithoutHyphen: T_ANY_CHAR .
   15                          | T_ANY_CHAR . ClassContentWithoutHyphen
   16                          | T_ANY_CHAR . T_HYPHEN T_ANY_CHAR
   17                          | T_ANY_CHAR . T_HYPHEN T_ANY_CHAR ClassContentWithoutHyphen

    T_ANY_CHAR  shift, and go to state 12
    T_HYPHEN    shift, and go to state 22

    $default  reduce using rule 14 (ClassContentWithoutHyphen)

    ClassContentWithoutHyphen  go to state 23


state 13

   12 ClassContent: T_HYPHEN . ClassContentWithoutHyphen

    T_ANY_CHAR  shift, and go to state 12

    ClassContentWithoutHyphen  go to state 24


state 14

   11 ClassRegex: T_BEGIN_CLASS ClassContent . T_END_CLASS

    T_END_CLASS  shift, and go to state 25


state 15

   13 ClassContent: ClassContentWithoutHyphen .

    $default  reduce using rule 13 (ClassContent)


state 16

    0 $accept: RegexAlternatives $end .

    $default  accept


state 17

    2 RegexAlternatives: CompoundRegex T_PIPE . RegexAlternatives

    T_ANY_CHAR     shift, and go to state 1
    T_BEGIN_GROUP  shift, and go to state 2
    T_BEGIN_CLASS  shift, and go to state 3

    RegexAlternatives  go to state 26
    CompoundRegex      go to state 5
    Regex              go to state 6
    PlainRegex         go to state 7
    SimpleRegex        go to state 8
    ClassRegex         go to state 9
    GroupRegex         go to state 10


state 18

    4 CompoundRegex: Regex CompoundRegex .

    $default  reduce using rule 4 (CompoundRegex)


state 19

   19 Quantifier: T_BEGIN_QUANTIFIER . T_NUMBER T_COMMA T_NUMBER T_END_QUANTIFIER

    T_NUMBER  shift, and go to state 27


state 20

    6 Regex: PlainRegex Quantifier .

    $default  reduce using rule 6 (Regex)


state 21

   18 GroupRegex: T_BEGIN_GROUP RegexAlternatives T_END_GROUP .

    $default  reduce using rule 18 (GroupRegex)


state 22

   16 ClassContentWithoutHyphen: T_ANY_CHAR T_HYPHEN . T_ANY_CHAR
   17                          | T_ANY_CHAR T_HYPHEN . T_ANY_CHAR ClassContentWithoutHyphen

    T_ANY_CHAR  shift, and go to state 28


state 23

   15 ClassContentWithoutHyphen: T_ANY_CHAR ClassContentWithoutHyphen .

    $default  reduce using rule 15 (ClassContentWithoutHyphen)


state 24

   12 ClassContent: T_HYPHEN ClassContentWithoutHyphen .

    $default  reduce using rule 12 (ClassContent)


state 25

   11 ClassRegex: T_BEGIN_CLASS ClassContent T_END_CLASS .

    $default  reduce using rule 11 (ClassRegex)


state 26

    2 RegexAlternatives: CompoundRegex T_PIPE RegexAlternatives .

    $default  reduce using rule 2 (RegexAlternatives)


state 27

   19 Quantifier: T_BEGIN_QUANTIFIER T_NUMBER . T_COMMA T_NUMBER T_END_QUANTIFIER

    T_COMMA  shift, and go to state 29


state 28

   16 ClassContentWithoutHyphen: T_ANY_CHAR T_HYPHEN T_ANY_CHAR .
   17                          | T_ANY_CHAR T_HYPHEN T_ANY_CHAR . ClassContentWithoutHyphen

    T_ANY_CHAR  shift, and go to state 12

    $default  reduce using rule 16 (ClassContentWithoutHyphen)

    ClassContentWithoutHyphen  go to state 30


state 29

   19 Quantifier: T_BEGIN_QUANTIFIER T_NUMBER T_COMMA . T_NUMBER T_END_QUANTIFIER

    T_NUMBER  shift, and go to state 31


state 30

   17 ClassContentWithoutHyphen: T_ANY_CHAR T_HYPHEN T_ANY_CHAR ClassContentWithoutHyphen .

    $default  reduce using rule 17 (ClassContentWithoutHyphen)


state 31

   19 Quantifier: T_BEGIN_QUANTIFIER T_NUMBER T_COMMA T_NUMBER . T_END_QUANTIFIER

    T_END_QUANTIFIER  shift, and go to state 32


state 32

   19 Quantifier: T_BEGIN_QUANTIFIER T_NUMBER T_COMMA T_NUMBER T_END_QUANTIFIER .

    $default  reduce using rule 19 (Quantifier)
